--- a/scripts/bibtool/bibtex/Makefile
+++ b/scripts/bibtool/bibtex/Makefile
@@ -1,2 +1,7 @@
 fixbib:
 	./fixbib.sh
+
+opt:
+	sed -i -e "s:^\([[:space:]]*\)url =:\1OPTurl =:g" *.bib
+	sed -i -e "s:^\([[:space:]]*\)issn =:\1OPTissn =:g" *.bib
+	sed -i -e "s:^\([[:space:]]*\)isbn =:\1OPTisbn =:g" *.bib
