feat(fonts): add new font sets : ibm plex, adobe source, stix2

--- a/scripts/bibtool/biblatex/Makefile
+++ b/scripts/bibtool/biblatex/Makefile
@@ -1,2 +1,4 @@
 fixbib:
+	cp ../bib/main.bib .
 	./fixbib.sh
+	-bibtex-tidy --no-escape --duplicates key --merge --enclosing-braces=title,subtitle,journal *.bib
